--- a/index.html
+++ b/index.html
@@ -25,16 +25,33 @@
           <h2 ng-show="restaurants.length && !filtered.length">No Matches</h2>
           <ul>
             <li ng-repeat="item in filtered = ( restaurants | filter:query )">
-              <span ng-click="editing = true" ng-hide="editing">
-                {{item.name}} <a ng-click="deleteRestaurant(item)">Delete</a>
+              <span ng-click="editingName = true" ng-hide="editingName">
+                <strong>{{item.name}}</strong>
               </span>
-              <span class="form-group" ng-show="editing" ng-submit="editing = false">
+              <span class="form-group" ng-show="editingName"
+                ng-submit="editingName = false">
                 <form class="form-inline" role="form">
                   <input type="text" class="form-control input-sm"
                    ng-model="item.name" placeholder="Name" required/>
-                  <button class="btn btn-default btn-sm" type="submit">Save</button>
+                  <button class="btn btn-default btn-sm"
+                    type="submit">Save</button>
                 </form>
               </span>
+              <br>
+              <span ng-click="editingType = true" ng-hide="editingType">
+                cuisine: {{item.type}}
+              </span>
+              <span class="form-group" ng-show="editingType"
+                ng-submit="editingType = false">
+                <form class="form-inline" role="form">
+                  <input type="text" class="form-control input-sm"
+                   ng-model="item.type" placeholder="Food Type" required/>
+                  <button class="btn btn-default btn-sm"
+                    type="submit">Save</button>
+                </form>
+              </span>
+              <br>
+              <a ng-click="deleteRestaurant(item)">delete</a>
             </li>
           </ul>
         </div>
@@ -42,7 +59,12 @@
           <h2>New Restaurant</h2>
           <form ng-submit="addRestaurant()" class="form-inline" role="form">
             <div class="form-group">
-              <input type="text" ng-model="restaurantName" class="form-control" placeholder="Enter Name">
+              <input type="text" ng-model="restaurantName" class="form-control"
+                placeholder="Enter Name">
+            </div>
+            <div class="form-group">
+              <input type="text" ng-model="restaurantType" class="form-control"
+                placeholder="Enter Food Type">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
