--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h4>Search Restaurants</h4>
           <form class="form-inline" role="form">
             <div class="form-group">
-              <input ng-model="query" type="text" class="form-control" id="restaurant-name" placeholder="Search">
+              <input ng-model="query" type="text" class="form-control" id="restaurant-detail" placeholder="Search">
             </div>
           </form>
         </div>
@@ -51,6 +51,34 @@
                 </form>
               </span>
               <br>
+              <span ng-click="editingAddress = true" ng-hide="editingAddress">
+                address: {{item.address}}
+              </span>
+              <span class="form-group" ng-show="editingAddress"
+                ng-submit="editingAddress = false">
+                <form class="form-inline" role="form">
+                  <input type="text" class="form-control input-sm"
+                   ng-model="item.address" placeholder="Address" required/>
+                  <button class="btn btn-default btn-sm"
+                    type="submit">Save</button>
+                </form>
+              </span>
+              <br>
+              <span ng-click="editingPrice = true" ng-hide="editingPrice">
+                price: {{item.price}}
+              </span>
+              <span class="form-group" ng-show="editingPrice"
+                ng-submit="editingPrice = false">
+                <form class="form-inline" role="form">
+                  <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$">$</label>
+                  <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$$">$$</label>
+                  <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$$$">$$$</label>
+                  <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$$$$">$$$$</label>
+                  <button class="btn btn-default btn-sm"
+                    type="submit">Save</button>
+                </form>
+              </span>
+              <br>
               <a ng-click="deleteRestaurant(item)">delete</a>
             </li>
           </ul>
@@ -65,6 +93,16 @@
             <div class="form-group">
               <input type="text" ng-model="restaurantType" class="form-control"
                 placeholder="Enter Food Type">
+            </div>
+            <div class="form-group">
+              <input type="text" ng-model="restaurantAddress" class="form-control"
+                placeholder="Enter Address">
+            </div>
+            <div class="form-group">
+              <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$">$</label>
+              <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$$">$$</label>
+              <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$$$">$$$</label>
+              <label><input type="radio" ng-model="restaurantPrice" class="form-control" value="$$$$">$$$$</label>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
